tests/frontend/fail/array/array_atomic_assignment.act
constructor of B
interface constructor()

creates

  uint[2] y := 3
